# plc-comm-mcprotocol-serial-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  TODO.md  build_docs.bat  build_docs_publish.bat  library.json  library.properties  platformio.ini
.github/workflows/: ci.yml  pages.yml  release.yml
cap/: takebishi_probe_tags.csv
docs/: _config.yml  index.md
docs/api/: _c_h_a_n_g_e_l_o_g_8md.html  _d_e_v_e_l_o_p_e_r___n_o_t_e_s_8md.html  _f_a_q_8md.html  _f_o_o_t_p_r_i_n_t___p_r_o_f_i_l_e_s_8md.html  _f_x5_u_c__32_m_t___d___r_s232_c_8md.html  _h_a_r_d_w_a_r_e___v_a_l_i_d_a_t_i_o_n_8md.html  _l_j71_c24___r_s232_c_8md.html  _m_a_n_u_a_l___c_o_m_m_a_n_d___c_o_v_e_r_a_g_e_8md.html  _m_c_u___q_u_i_c_k_s_t_a_r_t_8md.html  _n_a_t_i_v_e___c_o_m_m_a_n_d___b_a_c_k_l_o_g_8md.html  _q_j71_c24_n___r_s232_c_8md.html  _r_e_a_d_m_e_8md.html  _r_e_l_e_a_s_e___p_r_o_c_e_s_s_8md.html  _r_j71_c24___r2___r_s232_c_8md.html  _t_o_d_o_8md.html  _w_i_r_i_n_g___g_u_i_d_e_8md.html  annotated.html  annotated_dup.js  classes.html  classmcprotocol_1_1serial_1_1_frame_codec-members.html  classmcprotocol_1_1serial_1_1_frame_codec.html  classmcprotocol_1_1serial_1_1_melsec_serial_client-members.html  classmcprotocol_1_1serial_1_1_melsec_serial_client.html  classmcprotocol_1_1serial_1_1_melsec_serial_client.js  classmcprotocol_1_1serial_1_1_posix_serial_port-members.html  classmcprotocol_1_1serial_1_1_posix_serial_port.html  classmcprotocol_1_1serial_1_1_posix_serial_port.js  classmcprotocol_1_1serial_1_1_posix_sync_client-members.html  classmcprotocol_1_1serial_1_1_posix_sync_client.html  classmcprotocol_1_1serial_1_1_posix_sync_client.js  classstd_1_1span-members.html  classstd_1_1span.html  classstd_1_1span.js  classstd_1_1string__view-members.html  classstd_1_1string__view.html  classstd_1_1string__view.js  client_8hpp.html  client_8hpp.js  client_8hpp_source.html  codec_8hpp.html  (+345 more)
docs/api/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1e.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+121 more)
docsrc/: README.md
docsrc/maintainer/: CODEX_TAKEBISHI_CAPTURE_PLAYBOOK.md  DEVELOPER_NOTES.md  DOCS_AND_CI.md  MANUAL_COMMAND_COVERAGE.md  MANUAL_DERIVED_RULES.md  NATIVE_COMMAND_BACKLOG.md  README.md  RELEASE_PROCESS.md  TAKEBISHI_CAPTURE_REQUEST.md  TAKEBISHI_CAPTURE_SCENARIOS.md  TODO.md
docsrc/user/: FAQ.md  LIBRARY_ENTRYPOINTS.md  MCU_QUICKSTART.md  PLATFORMIO.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  WIRING_GUIDE.md
docsrc/validation/: README.md
docsrc/validation/reports/: FOOTPRINT_PROFILES.md  FX5UC_32MT_D_RS232C.md  FX5UC_32MT_D_RS232C_FORMAT5_2026-04-11.md  HARDWARE_VALIDATION.md  LJ71C24_RS232C.md  LJ71C24_RS232C_FORMAT5_2026-04-11.md  QJ71C24N_RS232C.md  QJ71C24N_RS232C_FORMAT5_2026-04-11.md  README.md  RJ71C24_R2_RS232C.md  RJ71C24_R2_RS232C_FORMAT4_2026-04-10.md  RJ71C24_R2_RS232C_FORMAT4_2026-04-11.md  RJ71C24_R2_RS232C_FORMAT5_2026-04-11.md
examples/: README.md  host_sync_quickstart.cpp  mcu_async_batch_read.cpp
examples/linux_cli/: README.md  cyclic_read_words.sh  fx5u_supported_device_rw_soak.sh  safe_bringup_readonly.sh  supported_device_rw_soak.sh
examples/platformio_arduino_async/: README.md  platformio_arduino_async.cpp
examples/platformio_arduino_mega2560_uart/: README.md  platformio_arduino_mega2560_uart.cpp
examples/platformio_arduino_uart/: README.md  platformio_arduino_uart.cpp
examples/platformio_esp32c3_arduino_async/: README.md  platformio_esp32c3_arduino_async.cpp
examples/platformio_esp32c3_arduino_uart/: README.md  platformio_esp32c3_arduino_uart.cpp
examples/platformio_rpipico_arduino_async/: README.md  platformio_rpipico_arduino_async.cpp
examples/platformio_rpipico_arduino_uart/: README.md  platformio_rpipico_arduino_uart.cpp
include/: algorithm  array  cctype  cstddef  cstdint  cstring  mcprotocol_serial.hpp  type_traits
include/mcprotocol/serial/: client.hpp  codec.hpp  high_level.hpp  host_sync.hpp  link_direct.hpp  posix_serial.hpp  qualified_buffer.hpp  span_compat.hpp  status.hpp  string_view_compat.hpp  types.hpp  version.hpp
scripts/: check_markdown_links.py  run_ci.bat  run_doxygen.bat  run_doxygen.sh
src/: client.cpp  codec.cpp  host_sync.cpp  posix_serial.cpp  win32_serial.cpp
tests/: codec_tests.cpp
tools/: mcprotocol_cli.cpp
