cmake_minimum_required(VERSION 3.20)

project(mcprotocol_serial_cpp VERSION 0.2.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(MCPROTOCOL_BUILD_EXAMPLES "Build compile-checked example programs" ON)
option(MCPROTOCOL_BUILD_HOST_SUPPORT "Build host-side serial backends and synchronous helpers" ON)
option(MCPROTOCOL_BUILD_CLI "Build the mcprotocol_cli host tool" ON)
set(MCPROTOCOL_FEATURE_PROFILE "full" CACHE STRING
    "Feature/footprint profile for mcprotocol_serial (full, reduced, ultra)")
set_property(CACHE MCPROTOCOL_FEATURE_PROFILE PROPERTY STRINGS full reduced ultra)

string(TOLOWER "${MCPROTOCOL_FEATURE_PROFILE}" MCPROTOCOL_FEATURE_PROFILE_NORMALIZED)

set(MCPROTOCOL_PROFILE_COMPILE_DEFINITIONS)
if(MCPROTOCOL_FEATURE_PROFILE_NORMALIZED STREQUAL "full")
  # Full feature set.
elseif(MCPROTOCOL_FEATURE_PROFILE_NORMALIZED STREQUAL "reduced")
  list(APPEND MCPROTOCOL_PROFILE_COMPILE_DEFINITIONS
    MCPROTOCOL_SERIAL_MAX_REQUEST_FRAME_BYTES=768
    MCPROTOCOL_SERIAL_MAX_RESPONSE_FRAME_BYTES=768
    MCPROTOCOL_SERIAL_MAX_REQUEST_DATA_BYTES=384
    MCPROTOCOL_SERIAL_MAX_RANDOM_ACCESS_ITEMS=16
    MCPROTOCOL_SERIAL_MAX_MULTI_BLOCK_COUNT=8
    MCPROTOCOL_SERIAL_MAX_MONITOR_ITEMS=16
    MCPROTOCOL_SERIAL_MAX_LOOPBACK_BYTES=64
    MCPROTOCOL_SERIAL_ENABLE_RANDOM_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_MULTI_BLOCK_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_MONITOR_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_HOST_BUFFER_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_MODULE_BUFFER_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_ASCII_MODE=1
    MCPROTOCOL_SERIAL_ENABLE_BINARY_MODE=0
    MCPROTOCOL_SERIAL_ENABLE_FRAME_C4=1
    MCPROTOCOL_SERIAL_ENABLE_FRAME_C3=0
    MCPROTOCOL_SERIAL_ENABLE_FRAME_C2=0
    MCPROTOCOL_SERIAL_ENABLE_FRAME_C1=0
    MCPROTOCOL_SERIAL_ENABLE_FRAME_E1=0
  )
elseif(MCPROTOCOL_FEATURE_PROFILE_NORMALIZED STREQUAL "ultra")
  list(APPEND MCPROTOCOL_PROFILE_COMPILE_DEFINITIONS
    MCPROTOCOL_SERIAL_MAX_REQUEST_FRAME_BYTES=256
    MCPROTOCOL_SERIAL_MAX_RESPONSE_FRAME_BYTES=256
    MCPROTOCOL_SERIAL_MAX_REQUEST_DATA_BYTES=128
    MCPROTOCOL_SERIAL_MAX_RANDOM_ACCESS_ITEMS=0
    MCPROTOCOL_SERIAL_MAX_MULTI_BLOCK_COUNT=0
    MCPROTOCOL_SERIAL_MAX_MONITOR_ITEMS=0
    MCPROTOCOL_SERIAL_MAX_LOOPBACK_BYTES=0
    MCPROTOCOL_SERIAL_ENABLE_RANDOM_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_MULTI_BLOCK_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_MONITOR_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_HOST_BUFFER_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_MODULE_BUFFER_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_CPU_MODEL_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_LOOPBACK_COMMANDS=0
    MCPROTOCOL_SERIAL_ENABLE_ASCII_MODE=1
    MCPROTOCOL_SERIAL_ENABLE_BINARY_MODE=0
    MCPROTOCOL_SERIAL_ENABLE_FRAME_C4=1
    MCPROTOCOL_SERIAL_ENABLE_FRAME_C3=0
    MCPROTOCOL_SERIAL_ENABLE_FRAME_C2=0
    MCPROTOCOL_SERIAL_ENABLE_FRAME_C1=0
    MCPROTOCOL_SERIAL_ENABLE_FRAME_E1=0
  )
else()
  message(FATAL_ERROR
    "Unknown MCPROTOCOL_FEATURE_PROFILE='${MCPROTOCOL_FEATURE_PROFILE}'. "
    "Expected one of: full, reduced, ultra.")
endif()

set(MCPROTOCOL_EFFECTIVE_BUILD_HOST_SUPPORT ${MCPROTOCOL_BUILD_HOST_SUPPORT})
if(NOT MCPROTOCOL_FEATURE_PROFILE_NORMALIZED STREQUAL "full" AND MCPROTOCOL_EFFECTIVE_BUILD_HOST_SUPPORT)
  message(STATUS
    "MCPROTOCOL_FEATURE_PROFILE=${MCPROTOCOL_FEATURE_PROFILE_NORMALIZED} is treated as core-only; "
    "host-side serial backends and synchronous helpers will not be built.")
  set(MCPROTOCOL_EFFECTIVE_BUILD_HOST_SUPPORT OFF)
endif()

set(MCPROTOCOL_EFFECTIVE_BUILD_CLI ${MCPROTOCOL_BUILD_CLI})
if(NOT MCPROTOCOL_EFFECTIVE_BUILD_HOST_SUPPORT AND MCPROTOCOL_EFFECTIVE_BUILD_CLI)
  message(STATUS "mcprotocol_cli requires host support; the CLI target will not be built.")
  set(MCPROTOCOL_EFFECTIVE_BUILD_CLI OFF)
endif()
if(WIN32)
  set(MCPROTOCOL_DOXYGEN_RUNNER ${CMAKE_CURRENT_SOURCE_DIR}/scripts/run_doxygen.bat)
else()
  set(MCPROTOCOL_DOXYGEN_RUNNER ${CMAKE_CURRENT_SOURCE_DIR}/scripts/run_doxygen.sh)
endif()
set(MCPROTOCOL_MARKDOWN_LINK_CHECKER ${CMAKE_CURRENT_SOURCE_DIR}/scripts/check_markdown_links.py)

set(MCPROTOCOL_SERIAL_PLATFORM_SOURCES)
if(MCPROTOCOL_EFFECTIVE_BUILD_HOST_SUPPORT)
  if(WIN32)
    list(APPEND MCPROTOCOL_SERIAL_PLATFORM_SOURCES
      src/win32_serial.cpp
    )
  else()
    list(APPEND MCPROTOCOL_SERIAL_PLATFORM_SOURCES
      src/posix_serial.cpp
    )
  endif()
endif()

set(MCPROTOCOL_SERIAL_SOURCES
  src/client.cpp
  src/codec.cpp
)

if(MCPROTOCOL_EFFECTIVE_BUILD_HOST_SUPPORT)
  list(APPEND MCPROTOCOL_SERIAL_SOURCES
    src/host_sync.cpp
    ${MCPROTOCOL_SERIAL_PLATFORM_SOURCES}
  )
endif()

add_library(mcprotocol_serial ${MCPROTOCOL_SERIAL_SOURCES})

target_include_directories(mcprotocol_serial
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

if(MCPROTOCOL_PROFILE_COMPILE_DEFINITIONS)
  target_compile_definitions(mcprotocol_serial
    PUBLIC
      ${MCPROTOCOL_PROFILE_COMPILE_DEFINITIONS}
  )
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
  target_compile_options(mcprotocol_serial
    PUBLIC
      -fno-exceptions
      -fno-rtti
    PRIVATE
      -Wall
      -Wextra
      -Wpedantic
  )
elseif(MSVC)
  target_compile_options(mcprotocol_serial
    PUBLIC
      /EHs-c-
      /GR-
    PRIVATE
      /W4
  )
endif()

include(CTest)
find_package(Python3 COMPONENTS Interpreter QUIET)

if(NOT MCPROTOCOL_FEATURE_PROFILE_NORMALIZED STREQUAL "full" AND BUILD_TESTING)
  message(STATUS
    "MCPROTOCOL_FEATURE_PROFILE=${MCPROTOCOL_FEATURE_PROFILE_NORMALIZED} is treated as core-only; "
    "BUILD_TESTING will be disabled.")
  set(BUILD_TESTING OFF CACHE BOOL "Build the testing tree." FORCE)
endif()

if(Python3_Interpreter_FOUND)
  set(MCPROTOCOL_PYTHON_EXECUTABLE ${Python3_EXECUTABLE})
else()
  set(MCPROTOCOL_PYTHON_EXECUTABLE python3)
endif()

if(BUILD_TESTING)
  add_executable(codec_tests
    tests/codec_tests.cpp
  )

  target_link_libraries(codec_tests PRIVATE mcprotocol_serial)

  add_test(NAME codec_tests COMMAND codec_tests)
endif()

if(MCPROTOCOL_EFFECTIVE_BUILD_CLI)
  add_executable(mcprotocol_cli
    tools/mcprotocol_cli.cpp
  )

  target_link_libraries(mcprotocol_cli PRIVATE mcprotocol_serial)
endif()

if(MCPROTOCOL_BUILD_EXAMPLES)
  add_executable(mcprotocol_example_mcu_async
    examples/mcu_async_batch_read.cpp
  )

  target_link_libraries(mcprotocol_example_mcu_async PRIVATE mcprotocol_serial)

  if(MCPROTOCOL_EFFECTIVE_BUILD_HOST_SUPPORT)
    add_executable(mcprotocol_example_host_sync
      examples/host_sync_quickstart.cpp
    )

    target_link_libraries(mcprotocol_example_host_sync PRIVATE mcprotocol_serial)
  endif()
endif()

set(MCPROTOCOL_DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
set(MCPROTOCOL_DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

configure_file(${MCPROTOCOL_DOXYFILE_IN} ${MCPROTOCOL_DOXYFILE_OUT} @ONLY)

add_custom_target(docs
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/docs/api
  COMMAND ${MCPROTOCOL_DOXYGEN_RUNNER} ${MCPROTOCOL_DOXYFILE_OUT}
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  COMMENT "Generating API documentation with Doxygen"
  VERBATIM
)

add_custom_target(check-markdown-links
  COMMAND ${MCPROTOCOL_PYTHON_EXECUTABLE} ${MCPROTOCOL_MARKDOWN_LINK_CHECKER}
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  COMMENT "Checking Markdown links"
  VERBATIM
)

add_custom_target(docs-all
  DEPENDS docs check-markdown-links
)
